--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -47,7 +47,7 @@
             text-indent: 0.5rem;
             border: #303030;
             background-color: white;
-            color: white;
+            color: black;
             outline: none;
             caret-color: rgba(129,216,208,1);
         }
